Fixed alignment issue on small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,13 +70,19 @@ li{
     margin-top: 50px;
 }
 
-@media screen and (max-width: 500px){
+
+@media screen and (max-width: 575px){
     .main-content{
         width: 100%;
         margin-left: auto;
         margin-right: auto;
     
     }
+#highscore-box{
+    margin-left: 0!important;
+    margin-bottom: 10px;
+}
+
 }
 
 @media screen and (max-width: 767px){
